Added Python bindings for the value backed types in the core module
 * Added python bindings for value backed matrix, row vector, and vector
   types.
 * Added python unit tests.
 * Updated CI to included python module compilation and unit testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,14 @@ matrix:
               - cmake ../
               - cmake --build .
               - ctest --verbose .
+        - language: python
+          python:
+              - "3.6"
+              - "3.7"
+              - "3.8"
+          sudo: false
+          install:
+              - pip install -r requirements.txt
+              - pip install -vvv .
+          script:
+              - pytest -v test_lin.py
