--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -1,10 +1,13 @@
+load(":test.bzl", "lin_test")
 
-cc_test(
-    name = "tests",
-    srcs = glob(["**/*.cpp"]),
-    deps = [
-        "@gtest//:gtest_main",
-        "//:lin"
-    ],
-    visibility = ["//visibility:private"],
-)
+test_suite(name="ci", tags=["ci"])
+test_suite(name="tests", tags=["tests"])
+
+lin_test(name="core", tags=["ci"])
+lin_test(name="factorizations", tags=["ci"])
+lin_test(name="generators", tags=["ci"])
+lin_test(name="math", tags=["ci"])
+lin_test(name="queries", tags=["ci"])
+lin_test(name="references", tags=["ci"])
+lin_test(name="substitutions", tags=["ci"])
+lin_test(name="views", tags=["ci"])
